--- a/index.html
+++ b/index.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Witflix</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
+    <header>
+        <img class="logo" src="./image/witflix-logo.svg"/>
+        <nav>
+            <a href="/">Topic 1</a>
+            <a href="/">Topic 2</a>
+            <a href="/">Topic 3</a>
+            <a href="/">Topic 4</a>
+        </nav>
+        <div class="search">
+            <input type="text" placeholder="search">
+            <i class="fas fa-magnifying-glass icon"></i>
+            <i class="fas fa-bell"></i>
+            <img class="profile" src="./image/Ellipse 1.svg"/>
+        </div>
+    </header>
+    <main>
+        <div class="hero-content">
+            <h1>Movie Name</h1>
+            <div class="movie-info">
+                <div class="user-ratings">
+                    <span class="user-rating fa fa-star checked"></span>
+                    <span class="user-rating fa fa-star checked"></span>
+                    <span class="user-rating fa fa-star checked"></span>
+                    <span class="user-rating fa fa-star checked"></span>
+                    <span class="user-rating fa fa-star checked"></span>
+                </div>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
