--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Witflix</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
     <header>
@@ -33,6 +32,19 @@
                     <span class="user-rating fa fa-star checked"></span>
                     <span class="user-rating fa fa-star checked"></span>
                     <span class="user-rating fa fa-star checked"></span>
+                    <span class="imdb.rating">7.3 IMDB</span>
+                    <span class="maturity-rating">18+</span>
+                    <span class="maturity-rating">2 h 21 min</span>
+                    <p>Michael Scofield finds himself in the Ogygia Prison in Sana'a, Yemen, seven years after his apparent death. His friends, brother and fellow escapee do everything it takes to bring him home.</p>
+                    <ul class="movie-details">
+                        <li><span>Starring: Wentworth Miller</span></li>
+                        <li><span>Genre: Serial drama, Crime drama, Action thriller</span></li>
+                        <li><span>Tags: English; Spanish; Arabic</span></li>
+                    </ul>
+                    <div class="btn btn-lg">
+                        <button>Play Now</button>
+                        <i class="fas fa-play"></i>
+                    </div>
                 </div>
             </div>
         </div>
