--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <input type="text" placeholder="search">
             <img class="buyutec" src="./image/10-search right.svg"/>
             <i class="fas fa-bell"></i>
-            <img class="profile" src="./image/Ellipse 1.svg"/>
+            <img class="profile" src="./image/Frame 3.svg"/>
         </div>
     </header>
     <main>
@@ -52,10 +52,43 @@
     </main>
     <section>
         <div class="suggestion-row"></div>
+        <div class="suggestion-title">
+            <h2>Popular Movies</h2>
+            <a href="">View All</a>
+        </div>
+        <div class="suggestion-content">
+            <div class="suggestion-item">
+                <div class="suggestion-item-content">
+                    <h3>Movie Name</h3>
+                    <div class="suggestion-details">
+                        <span class="maturity-rating">16+</span>
+                        <span class="duration">2 h 21 min</span>
+                        <div class="btn btn-lg">
+                            <i class="fas fa-play"></i>
+                            <button>Play Now</button>
+                            <div class="suggestion-item">
+                                <div class="suggestion-item-content">
+                                    <h3>Movie Name</h3>
+                                    <div class="suggestion-details">
+                                        <span class="maturity-rating">16+</span>
+                                        <span class="duration">2 h 21 min</span>
+                                        <div class="btn btn-lg">
+                                            <i class="fas fa-play"></i>
+                                            <button>Play Now</button>
+            <div class="suggestion-item">
+                <div class="suggestion-item-content">
+                    <h3>Movie Name</h3>
+                    <div class="suggestion-details">
+                        <span class="maturity-rating">16+</span>
+                        <span class="duration">2 h 21 min</span>
+                        <div class="btn btn-lg">
+                            <i class="fas fa-play"></i>
+                            <button>Play Now</button>
+                            
         <div class="suggestion-row"></div>
         <div class="suggestion-row">
             <div class="suggestion-title">
-                <h2>Popular Movies</h2>
+                <h2>Recommended for You</h2>
                 <a href="">View All</a>
             </div>
             <div class="suggestion-content">
@@ -64,7 +97,30 @@
                         <h3>Movie Name</h3>
                         <div class="suggestion-details">
                             <span class="maturity-rating">16+</span>
-                            <span class="maturity-rating">2 h 21 min</span>
+                            <span class="duration">2 h 21 min</span>
+                            <div class="btn btn-lg">
+                                <i class="fas fa-play"></i>
+                                <button>Play Now</button>
+                                <div class="suggestion-item">
+                                    <div class="suggestion-item-content">
+                                        <h3>Movie Name</h3>
+                                        <div class="suggestion-details">
+                                            <span class="maturity-rating">16+</span>
+                                            <span class="duration">2 h 21 min</span>
+                                            <div class="btn btn-lg">
+                                                <i class="fas fa-play"></i>
+                                                <button>Play Now</button>
+                <div class="suggestion-item">
+                    <div class="suggestion-item-content">
+                        <h3>Movie Name</h3>
+                        <div class="suggestion-details">
+                            <span class="maturity-rating">16+</span>
+                            <span class="duration">2 h 21 min</span>
+                            <div class="btn btn-lg">
+                                <i class="fas fa-play"></i>
+                                <button>Play Now</button>
+                                
+                            </div>
                         </div>
                     </div>
                 </div>
