--- a/index.html
+++ b/index.html
@@ -124,9 +124,30 @@
                         </div>
                     </div>
                 </div>
-            
-        </div>
+            </div>
     </section>
+<footer>
+    <div>
+        <nav>
+            <a href="/">Terms Of Use</a>
+            <a href="/">Privacy-Policy</a>
+            <a href="/">FAQ</a>
+            <a href="/">Watch List</a>
+            <p class="copyright">hakkı saklıdır</p>
+        </nav>
+    </div>
+    <div>
+        <p>Follow Us</p>
+        <img src="./image/facebook-icon.svg"/>
+        <img src="./image/youtube-icon.svg"/>
+        <img src="./image/twitter-icon.svg"/>
+    </div>
+    <div>
+        <p>Apps</p>
+        <img src="./image/applestore.svg"/>
+        <img src="./image/googleplay.svg"/>
+    </div>
+</footer>
     
 </body>
 </html>
