--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="text" placeholder="search">
             <img class="buyutec" src="./image/10-search right.svg"/>
             <i class="fas fa-bell"></i>
-            <img class="profile" src="./image/Frame 3.svg"/>
+            <img class="profile" src="./image/Rectangle 76.svg"/>
         </div>
     </header>
     <main>
