header - movie name

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
         <div class="hero-content">
-            <h1>Movie Name</h1>
+            <h1>Prison Break</h1>
             <div class="movie-info">
                 <div class="user-ratings">
                     <span class="user-rating fa fa-star checked"></span>
@@ -61,7 +61,7 @@
         <div class="suggestion-content">
             <div class="suggestion-item">
                 <div class="suggestion-item-content">
-                    <h3>Movie Name</h3>
+                    <h3>Transcendence</h3>
                     <div class="suggestion-details">
                         <span class="maturity-rating">16+</span>
                         <span class="duration">2 h 21 min</span>
@@ -70,7 +70,7 @@
                             <button>Play Now</button>
                             <div class="suggestion-item">
                                 <div class="suggestion-item-content">
-                                    <h3>Movie Name</h3>
+                                    <h3>Saving Private Ryan</h3>
                                     <div class="suggestion-details">
                                         <span class="maturity-rating">16+</span>
                                         <span class="duration">2 h 21 min</span>
@@ -79,7 +79,7 @@
                                             <button>Play Now</button>
             <div class="suggestion-item">
                 <div class="suggestion-item-content">
-                    <h3>Movie Name</h3>
+                    <h3>Fight Club</h3>
                     <div class="suggestion-details">
                         <span class="maturity-rating">16+</span>
                         <span class="duration">2 h 21 min</span>
@@ -96,7 +96,7 @@
             <div class="suggestion-content">
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>Movie Name</h3>
+                        <h3>Edward Scissorhands</h3>
                         <div class="suggestion-details">
                             <span class="maturity-rating">16+</span>
                             <span class="duration">2 h 21 min</span>
@@ -105,7 +105,7 @@
                                 <button>Play Now</button>
                                 <div class="suggestion-item">
                                     <div class="suggestion-item-content">
-                                        <h3>Movie Name</h3>
+                                        <h3>Matrix</h3>
                                         <div class="suggestion-details">
                                             <span class="maturity-rating">16+</span>
                                             <span class="duration">2 h 21 min</span>
@@ -114,7 +114,7 @@
                                                 <button>Play Now</button>
                 <div class="suggestion-item">
                     <div class="suggestion-item-content">
-                        <h3>Movie Name</h3>
+                        <h3>Dune</h3>
                         <div class="suggestion-details">
                             <span class="maturity-rating">16+</span>
                             <span class="duration">2 h 21 min</span>
