--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
     <header>
         <img class="logo" src="./image/witflix-logo.svg"/>
         <nav class="menu">
-            <a href="/">Topic 1</a>
-            <a href="/">Topic 2</a>
-            <a href="/">Topic 3</a>
-            <a href="/">Topic 4</a>
+            <a style="color: black;" href="/">Topic 1</a>
+            <a style="color: black;" href="/">Topic 2</a>
+            <a style="color: black;" href="/">Topic 3</a>
+            <a style="color: black;" href="/">Topic 4</a>
         </nav>
         <div class="search">
             <input type="text" placeholder="search">
             <img class="buyutec" src="./image/10-search right.svg"/>
-            <i class="fas fa-bell"></i>
+            <i class="fa-regular fa-bell" style="color:blue;"></i>
             <img class="profile" src="./image/Rectangle 76.svg"/>
         </div>
     </header>
@@ -33,7 +33,8 @@
                     <span class="user-rating fa fa-star checked"></span>
                     <span class="user-rating fa fa-star checked"></span>
                     <span class="user-rating fa fa-star checked"></span>
-                    <span class="user-rating fa fa-star checked"></span>
+                    <span class="user-rating fa fa-star checked"></span></div>
+                    <div>
                     <span class="imdb.rating">7.3 IMDB</span>
                     <span class="maturity-rating">16+</span>
                     <span class="duration">2 h 21 min</span>
