header - main finished

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
             <a href="/">Topic 4</a>
         </nav>
         <div class="user-control-panel">
-            <i class="fas fa-search"></i> Search
+            <input type="text" placeholder="search">
+            <i class="fas fa-search"></i>
             <i class="fa-regular fa-bell"></i>
             <img class="profile" src="./image/Rectangle 76.svg"/>
         </div>
@@ -33,7 +34,6 @@
                     <span class="user-rating fa fa-star checked"></span>
                     <span class="user-rating fa fa-star checked"></span>
                     <span class="user-rating fa fa-star checked"></span>
-                    
                     <span class="imdb.rating">7.3 IMDB</span>
                     <span class="maturity-rating">16+</span>
                     <span class="duration">2 h 21 min</span></div>
