desktop - tasarım - son

--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
     </div>
     <div>
         <p class="follow">Follow Us</p>
-        <img src="./image/facebook-icon.svg"/>
-        <img src="./image/youtube-icon.svg"/>
-        <img src="./image/twitter-icon.svg"/>
+        <img class="follow-icon" src="./image/facebook-icon.svg"/>
+        <img class="follow-icon" src="./image/youtube-icon.svg"/>
+        <img class="follow-icon" src="./image/twitter-icon.svg"/>
     </div>
     <div>
         <p class="apps">Apps</p>
-        <img src="./image/applestore.svg"/>
-        <img src="./image/googleplay.svg"/>
+        <img class="apps-icon" src="./image/applestore.svg"/>
+        <img class="apps-icon" src="./image/googleplay.svg"/>
     </div>
 </footer>
     
